# graph-api

./: LICENSE  README.md  pyproject.toml
api/: app.py  config.py  serializers.py  settings.toml
api/core/: core.py  graph_aux.py
api/database/: database.py
api/models/: edge.py  graph.py
api/routes/: graph_routes.py
